index.css
body {
    background: #303030;
    font-family: sans-serif, Arial, sans-serif;
}

.viewport-height {
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: #222222;
    height: 110vh;
}

#main-text {
    color: #fff;
    font-size: 5.5em;
    font-weight: 500;
    /* text-align: center; */
    /* margin-top: 40vh; */
}

.rest-of-page {
    padding-top: 100px;
    border-radius: 30px;
    margin-top: -10vh;
    background-color: #303030;
}

#intro {
    margin: 0 auto;
    max-width: 700px;
    /* margin-top: 100px !important; */
    align-items: center;
    margin-bottom: 20px;
    padding: 55px;
    width: 55%;
    border-style: hidden;
    border-radius: 30px;
    text-align: center;
    color: white;
    font-size: 35px;
    font-family: 'Kalam', Verdana, sans-serif;
    background: linear-gradient(to left, #bc810b, #995ab0);
    background-size: 500%;
    animation-name: collapseIntro;
    animation-duration: 3s;

    animation: introGradient 10s infinite alternate;
}

@keyframes introGradient {
    from {background-position: right;}
    to {background-position: left;}
}

body {
    /* this fixes a particular problem where thie intro-back-element behaved weird */
    overflow-anchor: none;
  }

@keyframes collapseIntro {
    from {
        height: 100%;
    }

    to {
        height: 10%;
    }
}

#intro-back-container {
    justify-content: center;
    background-color: #0a53ff;
    margin-left: 45px;
    padding: 0px 55px;
    width: 55%;

    /* margin-top: 125px; */
}

#intro-back-container.intro-back-container-normal {
    display: flex;
}

#intro-back-container.intro-back-container-line {
    display: block;
    padding: 0px;
    margin: 0px;
}

#intro-back.intro-back-normal {
    margin-top: 80px;
    margin-bottom: 80px;
    padding: 55px;
    z-index: -1;
    width: 55%;
    height: 300px;
    border-style: hidden;
    position: fixed;
    border-radius: 20px;
    
    /* background: linear-gradient(to right, #c0e487, #b1bdda); */
    /* animation: un-transform-to-line 0.5s forwards; */
}

#intro-back.intro-back-line {
    /* display: none; */
    margin-top: 180px;
    /* margin-left: 10px; */
    margin-left: 90px;
    margin-bottom: 80px;
    z-index: -1;
    width: 55%;
    /* width: 1%; */
    height: 300px;
    border-style: hidden;
    position: fixed;
    border-radius: 30px;
    /* background: linear-gradient(to bottom, #adff29, #0a53ff); */
    /* animation: transform-to-line 0.5s forwards; */
}

@keyframes transform-to-line {
    from {
        margin-left: 45px;
        width: 45%;
    }

    to {
        margin-left: 10px;
        width: 1%;
    }
}

@keyframes un-transform-to-line {
    from {
        margin-left: 10px;
        width: 1%;
    }
    
    to {
        /* margin-left: 45px; */
        width: 45%;
    }
}

#close_intro_button {
    height: 25px;
    width: 25px;
    border-style: hidden;
    border-radius: 50%;
    background-color: white;
    float: right !important;
    color: black;
    font-size: 15px;
    font-family: sans-serif;
    user-select: none;

    display: flex;
    align-items: center;
    justify-content: center;
}

.Hi_text_in_intro {
    font-size: 65px;
}

hr {
    margin-right: 45px;
    margin-left: 45px;
}

h3 {
    margin-left: 50px;
    font-size: 30px;
    color: #d0dfff;
}

#projectsGroup {
    max-width: fit-content;
    display: flex;
    flex-wrap: wrap;
    
    justify-content: center;
    margin-top: 30px;
    margin-bottom: 80px;
    margin-left: 05px;
    list-style-type: none;
}

.project {
    /* display: inline-block; */
    margin-left: 40px;
    margin-right: 40px;
    margin-top: 10px;
}

#projectsGroup img {
    border-radius: 17px;
    width: 300px;
    transition: .5s;
}

.projectImageContainer {
    /* overflow: hidden; */
    border-radius: 20px;
}

#projectsGroup img:hover{ 
    /* animation: hoverUp 1s forwards; */
    transform: scale(1.05);
}

#projectsGroup img:not(:hover){ 
    /* animation: hoverDown 1s backwards .3s; */
    transform: scale(1);
}

@keyframes hoverUp {
    from {
        /* filter: blur(0px); */
        box-shadow: 0px 0px 0px 0px #1c1c1c;
        /* width: 300px; */
        /* margin-left: 0px; */
        /* margin-right: 0px; */
    }

    to {
        /* filter: blur(7px); */
        box-shadow: 0px 25px 50px 0px #1c1c1c;
        /* width: 310px; */
        /* margin-left: -5px; */
        /* margin-right: -5px; */
    }
}


@keyframes hoverDown {
    from {
        /* filter: blur(7px); */
        box-shadow: 0px 25px 50px 0px #1c1c1c;
        /* width: 310px; */
        /* margin-left: -5px; */
        /* margin-right: -5px; */
    }

    to {
        /* filter: blur(0px); */
        box-shadow: 0px 0px 0px 0px #1c1c1c;
        /* width: 300px; */
        /* margin-left: 0px; */
        /* margin-right: 0px; */
    }
}

.projectLink {
    display: block;
    font-weight: bold;
    text-decoration: none;
    color: #4280D7;
    text-align: center;
    padding-top: 10px;
    font-size: 25px;
}


#alsoInterestedInContainer {
    margin-left: 80px;
    margin-bottom: 100px;
    margin-top: 20px;
    margin-right: 100px;
    color: white;
}

.alsoInterestedInItemContainer {
    display: flex;
    margin: 25px auto;
}

.alsoInterestedInImgDIV {
    flex: 1;
}

.alsoInterestedInImg {
    width: 400px;
    border-radius: 20px;
}

.alsoInterestedInText {
    flex: 2;
    margin-left: 30px;
}

.alsoInterestedInText h4 {
    font-size: 30px;
    margin: 10px 0px;
    font-family: 'Open Sans', Tahoma, Verdana, sans-serif;
    font-weight: 600;
}

.alsoInterestedInText p {
    font-size: 20px;
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
}

@media (max-width: 600px) {
    #intro {
        width: auto;
        margin-left: 10px;
        margin-right: 10px;
        font-size: 25px;
        animation: floatUp 0.75s 0.25s;
        animation-fill-mode: forwards;
        /* box-shadow: 0px 0px  60px #220affc0; */
        margin-top: 250px;
    }

    #intro-hr {
        margin-right: 5px;
        margin-left: 5px;
    }

    #intro-back-container {
        display: none !important;
    }
 
    @keyframes floatUp {
        from {
            box-shadow: 0px 0px  0px #9d0aff9a;
            margin-top: 100px;
        }

        to {
            box-shadow: 0px 0px  60px #220affc0;
            margin-top: 80px;
        }
    }

    h3 {
        margin-left: 20px !important;
    }

    .hr-under-h3 {
        margin-left: 20px !important;
        width: 90%;
        margin-right: 70px;
    }

    #projectsGroup {
        margin-top: 10px;
        margin-bottom: 80px;
        margin-left: 0px;
        padding-left: 0px;
        padding-right: 20px;
        list-style-type: none;
    }

    .project {
        display: inline-block;
        margin-left: auto;
        margin-right: auto;
        margin-top: 25px;
        width: 100%;
    }

    #projectsGroup img:hover{ 
        animation: none;
    }
    
    #projectsGroup img:not(:hover){ 
        animation: none;
    }

    .project img {
        width: 75% !important;
    }

    .projectLink {
        display: block;
        font-weight: bold;
        text-decoration: none;
        color: #4280D7;
        text-align: left;
        padding-left: 10px;
        padding-top: 10px;
        font-size: 25px;
    }

    .alsoInterestedInItemContainer {
        display: inline;
        width: 100%;
    }

    #alsoInterestedInContainer {
        margin-left: 20px;
        margin-right: 20px;
    }

    .alsoInterestedInImg {
        width: 100%;
    }

    .alsoInterestedInImgDIV {
        width: 100%;
    }

    .alsoInterestedInText {
        margin-left: 0px;
    }
}

@media (max-width: 638px) {
    .alsoInterestedInImg {
        width: 300px;
    }

    .alsoInterestedInImgDIV {
        width: 100%;
    }
}

/* Dark Theme */
@media (prefers-color-scheme: dark) {
    @media (max-width: 600px) {
        #intro {
            animation: floatUpDARK 0.75s 0.25s;
            animation-fill-mode: forwards;
        }

        @keyframes floatUpDARK {
            from {
                box-shadow: 0px 0px  0px #8244ac9a;
                margin-top: 100px;
            }
    
            to {
                box-shadow: 0px 0px 60px #3d4a75;
                margin-top: 80px;
            }
        }

        #projectsGroup img:hover{ 
            animation: none !important;
        }
        
        #projectsGroup img:not(:hover){ 
            animation: none !important;
        }
    }

    #intro {
        background: linear-gradient(to bottom right, #547bc9, #9140aa);
    }

    #projectsGroup img:hover{ 
        animation: hoverUpDARK 1s forwards;
    }
    
    #projectsGroup img:not(:hover){ 
        animation: hoverDownDARK 1s forwards;
    }
}

@keyframes hoverUpDARK {
    from {
        /* filter: blur(0px); */
        box-shadow: 0px 0px 0px 0px #505050;
        width: 300px;
        margin-left: 0px;
        margin-right: 0px;

        border-style: solid;
        border-color: #a5b7f1;
        border-width: 1px;
    }

    to {
        /* filter: blur(7px); */
        box-shadow: 0px 25px 50px 0px #000000;
        width: 310px;
        margin-left: -10px;
        margin-right: -10px;

        border-style: solid;
        border-color: #a5b7f1;
        border-width: 5px;
    }
}


@keyframes hoverDownDARK {
    from {
        /* filter: blur(7px); */
        box-shadow: 0px 25px 50px 0px #000000;
        width: 310px;
        margin-left: -10px;
        margin-right: -10px;

        border-style: solid;
        border-color: #a5b7f1;
        border-width: 5px;
    }

    to {
        /* filter: blur(0px); */
        box-shadow: 0px 0px 0px 0px #505050;
        width: 300px;
        margin-left: 0px;
        margin-right: 0px;

        border-style: solid;
        border-color: #a5b7f1;
        border-width: 1px;
    }
}

/* For IE only */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    #intro {
        margin-top: 180px;
        border-radius: 15px 15px 0px 0px;
        border-style: solid;
        border-color: #023864;
        border-width: 1px;
        font-family: sans-serif;
        font-size: 20px;
        width: 400px;
        background: linear-gradient(to bottom right, #bfd4fd, #edb3ff);
        color: #000000;
    }

    .alsoInterestedInItemContainer {
        display: flexbox;
        flex: 0 1 auto;
        margin: 25px auto;
    }

    .projectLink {
        font-family: monospace;
        color: rgb(218, 238, 255);
    }

    #projectsGroup img:hover{ 
        animation: hoverUpIE 2s forwards;;
    }
    
    #projectsGroup img:not(:hover){ 
        animation: hoverDownIE 2s forwards;;
    }

    .alsoInterestedInItemContainer {
        color: white;
    }

    .projectImageContainer img {
        border: 5px solid #000000;
    }

    .alsoInterestedInImgDIV img{
        border-style: solid;
        border-color: #a5b7f1;
        border-width: 5px;
    }

}


@keyframes hoverUpIE {
    from {
        /* filter: blur(0px); */
        border-style: solid;
        border-color: #a5b7f1;
        border-width: 5px;

        margin-left: 0px;
        margin-right: 0px;
    }

    to {
        /* filter: blur(7px); */
        border-style: solid;
        border-color: #a5b7f1;
        border-width: 10px;

        margin-left: -10px;
        margin-right: -10px;
    }
}


@keyframes hoverDownIE {
    from {
        /* filter: blur(7px); */
        border-style: solid;
        border-color: #a5b7f1;
        border-width: 10px;

        margin-left: -10px;
        margin-right: -10px;
    }

    to {
        /* filter: blur(0px); */
        border-style: solid;
        border-color: #a5b7f1;
        border-width: 5px;

        margin-left: 0px;
        margin-right: 0px;
    }
}

